# qgroundcontrol

./: CMakeLists.txt  qgroundcontrol.pro  qgroundcontrol.qrc
src/: CMakeLists.txt  QGCApplication.cc  QGCToolbox.cc  QGCToolbox.h
src/BallisticCalculator/: BallisticCalculator.cc  BallisticCalculator.cpp  BallisticCalculator.h  CMakeLists.txt  README.md
src/FlightDisplay/: BallisticTargetIndicator.qml  CMakeLists.txt  CustomOSD.qml  FlightDisplayView.qml  FlyViewCustomLayer.qml  FlyViewWidgetLayer.qml
src/QmlControls/: QGroundControlQmlGlobal.h
src/QmlControls/QGroundControl/FlightDisplay/: qmldir
src/Settings/: BallisticCalculator.SettingsGroup.json  BallisticCalculatorSettings.cc  BallisticCalculatorSettings.h  BallisticCalculatorSettings.qml  CMakeLists.txt  CustomOSD.SettingsGroup.json  CustomOSDSettings.cc  CustomOSDSettings.h  SettingsManager.cc  SettingsManager.h
src/Vehicle/: CMakeLists.txt  Vehicle.cc  Vehicle.h
src/api/: QGCCorePlugin.cc  QGCCorePlugin.h
src/ui/preferences/: BallisticCalculatorSettings.qml  CMakeLists.txt  CustomOSDPreview.qml  CustomOSDSettings.qml
